Sample/parser.output
Terminals unused in grammar

   CONST


Rules useless in parser due to conflicts

  122 N: %empty


State 104 conflicts: 5 shift/reduce
State 124 conflicts: 8 shift/reduce
State 175 conflicts: 1 reduce/reduce


Grammar

    0 $accept: starter $end

    1 starter: starter builder
    2        | builder

    3 builder: function
    4        | declaration

    5 $@1: %empty

    6 $@2: %empty

    7 function: type identifier $@1 '(' argument_list ')' $@2 compound_stmt

    8 type: data_type pointer
    9     | data_type

   10 pointer: '*' pointer
   11        | '*'

   12 data_type: sign_specifier type_specifier
   13          | type_specifier

   14 sign_specifier: SIGNED
   15               | UNSIGNED

   16 type_specifier: INT
   17               | SHORT INT
   18               | SHORT
   19               | LONG
   20               | LONG INT
   21               | LONG_LONG
   22               | LONG_LONG INT
   23               | CHAR
   24               | FLOAT
   25               | VOID

   26 argument_list: arguments
   27              | %empty

   28 arguments: arguments ',' arg
   29          | arg

   30 arg: type identifier

   31 stmt: compound_stmt
   32     | single_stmt

   33 $@3: %empty

   34 compound_stmt: '{' $@3 statements '}'

   35 statements: statements M stmt
   36           | %empty

   37 single_stmt: if_block
   38            | for_block
   39            | while_block
   40            | declaration
   41            | function_call ';'
   42            | RETURN ';'
   43            | CONTINUE ';'
   44            | BREAK ';'
   45            | RETURN sub_expr ';'

   46 $@4: %empty

   47 for_block: FOR '(' expression_stmt expression_stmt ')' $@4 stmt

   48 $@5: %empty

   49 for_block: FOR '(' expression_stmt expression_stmt expression ')' $@5 stmt

   50 if_block: IF '(' expression ')' M stmt
   51         | IF '(' expression ')' M stmt N ELSE M stmt

   52 $@6: %empty

   53 $@7: %empty

   54 while_block: WHILE M '(' expression ')' M $@6 stmt $@7

   55 declaration: type declaration_list ';'
   56            | declaration_list ';'
   57            | unary_expr ';'

   58 declaration_list: declaration_list ',' sub_decl
   59                 | sub_decl

   60 sub_decl: assignment_expr
   61         | identifier
   62         | array_access

   63 expression_stmt: expression ';'
   64                | ';'

   65 expression: expression ',' sub_expr
   66           | sub_expr

   67 sub_expr: sub_expr rel sub_expr
   68         | sub_expr LOGICAL_AND M sub_expr
   69         | sub_expr LOGICAL_OR M sub_expr
   70         | '!' sub_expr
   71         | arithmetic_expr
   72         | assignment_expr
   73         | unary_expr

   74 rel: '>'
   75    | '<'
   76    | EQ
   77    | NOT_EQ
   78    | LS_EQ
   79    | GR_EQ

   80 assignment_expr: lhs assign arithmetic_expr
   81                | lhs assign array_access
   82                | lhs assign function_call
   83                | lhs assign unary_expr
   84                | unary_expr assign unary_expr

   85 unary_expr: identifier INCREMENT
   86           | identifier DECREMENT
   87           | DECREMENT identifier
   88           | INCREMENT identifier

   89 lhs: identifier
   90    | array_access

   91 identifier: IDENTIFIER

   92 assign: '='
   93       | ADD_ASSIGN
   94       | SUB_ASSIGN
   95       | MUL_ASSIGN
   96       | DIV_ASSIGN
   97       | MOD_ASSIGN

   98 arithmetic_expr: arithmetic_expr math arithmetic_expr
   99                | '(' arithmetic_expr ')'
  100                | '-' arithmetic_expr
  101                | identifier
  102                | constant

  103 math: '+'
  104     | '-'
  105     | '*'
  106     | '/'
  107     | '%'

  108 constant: DEC_CONSTANT
  109         | HEX_CONSTANT
  110         | CHAR_CONSTANT
  111         | FLOAT_CONSTANT

  112 array_access: identifier '[' array_index ']'

  113 array_index: constant
  114            | identifier

  115 function_call: identifier '(' parameter_list ')'
  116              | identifier '(' ')'

  117 parameter_list: parameter_list ',' parameter
  118               | parameter

  119 parameter: sub_expr
  120          | STRING

  121 M: %empty

  122 N: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 70
'%' (37) 107
'(' (40) 7 47 49 50 51 54 99 115 116
')' (41) 7 47 49 50 51 54 99 115 116
'*' (42) 10 11 105
'+' (43) 103
',' (44) 28 58 65 117
'-' (45) 100 104
'/' (47) 106
';' (59) 41 42 43 44 45 55 56 57 63 64
'<' (60) 75
'=' (61) 92
'>' (62) 74
'[' (91) 112
']' (93) 112
'{' (123) 34
'}' (125) 34
error (256)
IDENTIFIER (258) 91
DEC_CONSTANT (259) 108
HEX_CONSTANT (260) 109
CHAR_CONSTANT (261) 110
FLOAT_CONSTANT (262) 111
STRING (263) 120
LOGICAL_AND (264) 68
LOGICAL_OR (265) 69
LS_EQ (266) 78
GR_EQ (267) 79
EQ (268) 76
NOT_EQ (269) 77
MUL_ASSIGN (270) 95
DIV_ASSIGN (271) 96
MOD_ASSIGN (272) 97
ADD_ASSIGN (273) 93
SUB_ASSIGN (274) 94
INCREMENT (275) 85 88
DECREMENT (276) 86 87
SHORT (277) 17 18
INT (278) 16 17 20 22
LONG (279) 19 20
LONG_LONG (280) 21 22
SIGNED (281) 14
UNSIGNED (282) 15
CONST (283)
VOID (284) 25
CHAR (285) 23
FLOAT (286) 24
IF (287) 50 51
FOR (288) 47 49
WHILE (289) 54
CONTINUE (290) 43
BREAK (291) 44
RETURN (292) 42 45
UMINUS (293)
LOWER_THAN_ELSE (294)
ELSE (295) 51


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
starter (59)
    on left: 1 2, on right: 0 1
builder (60)
    on left: 3 4, on right: 1 2
function (61)
    on left: 7, on right: 3
$@1 (62)
    on left: 5, on right: 7
$@2 (63)
    on left: 6, on right: 7
type (64)
    on left: 8 9, on right: 7 30 55
pointer (65)
    on left: 10 11, on right: 8 10
data_type (66)
    on left: 12 13, on right: 8 9
sign_specifier (67)
    on left: 14 15, on right: 12
type_specifier (68)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 12 13
argument_list (69)
    on left: 26 27, on right: 7
arguments (70)
    on left: 28 29, on right: 26 28
arg (71)
    on left: 30, on right: 28 29
stmt (72)
    on left: 31 32, on right: 35 47 49 50 51 54
compound_stmt (73)
    on left: 34, on right: 7 31
$@3 (74)
    on left: 33, on right: 34
statements (75)
    on left: 35 36, on right: 34 35
single_stmt (76)
    on left: 37 38 39 40 41 42 43 44 45, on right: 32
for_block (77)
    on left: 47 49, on right: 38
$@4 (78)
    on left: 46, on right: 47
$@5 (79)
    on left: 48, on right: 49
if_block (80)
    on left: 50 51, on right: 37
while_block (81)
    on left: 54, on right: 39
$@6 (82)
    on left: 52, on right: 54
$@7 (83)
    on left: 53, on right: 54
declaration (84)
    on left: 55 56 57, on right: 4 40
declaration_list (85)
    on left: 58 59, on right: 55 56 58
sub_decl (86)
    on left: 60 61 62, on right: 58 59
expression_stmt (87)
    on left: 63 64, on right: 47 49
expression (88)
    on left: 65 66, on right: 49 50 51 54 63 65
sub_expr (89)
    on left: 67 68 69 70 71 72 73, on right: 45 65 66 67 68 69 70 119
rel (90)
    on left: 74 75 76 77 78 79, on right: 67
assignment_expr (91)
    on left: 80 81 82 83 84, on right: 60 72
unary_expr (92)
    on left: 85 86 87 88, on right: 57 73 83 84
lhs (93)
    on left: 89 90, on right: 80 81 82 83
identifier (94)
    on left: 91, on right: 7 30 61 85 86 87 88 89 101 112 114 115 116
assign (95)
    on left: 92 93 94 95 96 97, on right: 80 81 82 83 84
arithmetic_expr (96)
    on left: 98 99 100 101 102, on right: 71 80 98 99 100
math (97)
    on left: 103 104 105 106 107, on right: 98
constant (98)
    on left: 108 109 110 111, on right: 102 113
array_access (99)
    on left: 112, on right: 62 81 90
array_index (100)
    on left: 113 114, on right: 112
function_call (101)
    on left: 115 116, on right: 41 82
parameter_list (102)
    on left: 117 118, on right: 115 117
parameter (103)
    on left: 119 120, on right: 117 118
M (104)
    on left: 121, on right: 35 50 51 54 68 69
N (105)
    on left: 122, on right: 51


State 0

    0 $accept: . starter $end

    IDENTIFIER  shift, and go to state 1
    INCREMENT   shift, and go to state 2
    DECREMENT   shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    LONG_LONG   shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    VOID        shift, and go to state 10
    CHAR        shift, and go to state 11
    FLOAT       shift, and go to state 12

    starter           go to state 13
    builder           go to state 14
    function          go to state 15
    type              go to state 16
    data_type         go to state 17
    sign_specifier    go to state 18
    type_specifier    go to state 19
    declaration       go to state 20
    declaration_list  go to state 21
    sub_decl          go to state 22
    assignment_expr   go to state 23
    unary_expr        go to state 24
    lhs               go to state 25
    identifier        go to state 26
    array_access      go to state 27


State 1

   91 identifier: IDENTIFIER .

    $default  reduce using rule 91 (identifier)


State 2

   88 unary_expr: INCREMENT . identifier

    IDENTIFIER  shift, and go to state 1

    identifier  go to state 28


State 3

   87 unary_expr: DECREMENT . identifier

    IDENTIFIER  shift, and go to state 1

    identifier  go to state 29


State 4

   17 type_specifier: SHORT . INT
   18               | SHORT .

    INT  shift, and go to state 30

    $default  reduce using rule 18 (type_specifier)


State 5

   16 type_specifier: INT .

    $default  reduce using rule 16 (type_specifier)


State 6

   19 type_specifier: LONG .
   20               | LONG . INT

    INT  shift, and go to state 31

    $default  reduce using rule 19 (type_specifier)


State 7

   21 type_specifier: LONG_LONG .
   22               | LONG_LONG . INT

    INT  shift, and go to state 32

    $default  reduce using rule 21 (type_specifier)


State 8

   14 sign_specifier: SIGNED .

    $default  reduce using rule 14 (sign_specifier)


State 9

   15 sign_specifier: UNSIGNED .

    $default  reduce using rule 15 (sign_specifier)


State 10

   25 type_specifier: VOID .

    $default  reduce using rule 25 (type_specifier)


State 11

   23 type_specifier: CHAR .

    $default  reduce using rule 23 (type_specifier)


State 12

   24 type_specifier: FLOAT .

    $default  reduce using rule 24 (type_specifier)


State 13

    0 $accept: starter . $end
    1 starter: starter . builder

    $end        shift, and go to state 33
    IDENTIFIER  shift, and go to state 1
    INCREMENT   shift, and go to state 2
    DECREMENT   shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    LONG_LONG   shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    VOID        shift, and go to state 10
    CHAR        shift, and go to state 11
    FLOAT       shift, and go to state 12

    builder           go to state 34
    function          go to state 15
    type              go to state 16
    data_type         go to state 17
    sign_specifier    go to state 18
    type_specifier    go to state 19
    declaration       go to state 20
    declaration_list  go to state 21
    sub_decl          go to state 22
    assignment_expr   go to state 23
    unary_expr        go to state 24
    lhs               go to state 25
    identifier        go to state 26
    array_access      go to state 27


State 14

    2 starter: builder .

    $default  reduce using rule 2 (starter)


State 15

    3 builder: function .

    $default  reduce using rule 3 (builder)


State 16

    7 function: type . identifier $@1 '(' argument_list ')' $@2 compound_stmt
   55 declaration: type . declaration_list ';'

    IDENTIFIER  shift, and go to state 1
    INCREMENT   shift, and go to state 2
    DECREMENT   shift, and go to state 3

    declaration_list  go to state 35
    sub_decl          go to state 22
    assignment_expr   go to state 23
    unary_expr        go to state 36
    lhs               go to state 25
    identifier        go to state 37
    array_access      go to state 27


State 17

    8 type: data_type . pointer
    9     | data_type .

    '*'  shift, and go to state 38

    $default  reduce using rule 9 (type)

    pointer  go to state 39


State 18

   12 data_type: sign_specifier . type_specifier

    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    LONG_LONG  shift, and go to state 7
    VOID       shift, and go to state 10
    CHAR       shift, and go to state 11
    FLOAT      shift, and go to state 12

    type_specifier  go to state 40


State 19

   13 data_type: type_specifier .

    $default  reduce using rule 13 (data_type)


State 20

    4 builder: declaration .

    $default  reduce using rule 4 (builder)


State 21

   56 declaration: declaration_list . ';'
   58 declaration_list: declaration_list . ',' sub_decl

    ','  shift, and go to state 41
    ';'  shift, and go to state 42


State 22

   59 declaration_list: sub_decl .

    $default  reduce using rule 59 (declaration_list)


State 23

   60 sub_decl: assignment_expr .

    $default  reduce using rule 60 (sub_decl)


State 24

   57 declaration: unary_expr . ';'
   84 assignment_expr: unary_expr . assign unary_expr

    MUL_ASSIGN  shift, and go to state 43
    DIV_ASSIGN  shift, and go to state 44
    MOD_ASSIGN  shift, and go to state 45
    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    '='         shift, and go to state 48
    ';'         shift, and go to state 49

    assign  go to state 50


State 25

   80 assignment_expr: lhs . assign arithmetic_expr
   81                | lhs . assign array_access
   82                | lhs . assign function_call
   83                | lhs . assign unary_expr

    MUL_ASSIGN  shift, and go to state 43
    DIV_ASSIGN  shift, and go to state 44
    MOD_ASSIGN  shift, and go to state 45
    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    '='         shift, and go to state 48

    assign  go to state 51


State 26

   61 sub_decl: identifier .
   85 unary_expr: identifier . INCREMENT
   86           | identifier . DECREMENT
   89 lhs: identifier .
  112 array_access: identifier . '[' array_index ']'

    INCREMENT  shift, and go to state 52
    DECREMENT  shift, and go to state 53
    '['        shift, and go to state 54

    ','       reduce using rule 61 (sub_decl)
    ';'       reduce using rule 61 (sub_decl)
    $default  reduce using rule 89 (lhs)


State 27

   62 sub_decl: array_access .
   90 lhs: array_access .

    ','       reduce using rule 62 (sub_decl)
    ';'       reduce using rule 62 (sub_decl)
    $default  reduce using rule 90 (lhs)


State 28

   88 unary_expr: INCREMENT identifier .

    $default  reduce using rule 88 (unary_expr)


State 29

   87 unary_expr: DECREMENT identifier .

    $default  reduce using rule 87 (unary_expr)


State 30

   17 type_specifier: SHORT INT .

    $default  reduce using rule 17 (type_specifier)


State 31

   20 type_specifier: LONG INT .

    $default  reduce using rule 20 (type_specifier)


State 32

   22 type_specifier: LONG_LONG INT .

    $default  reduce using rule 22 (type_specifier)


State 33

    0 $accept: starter $end .

    $default  accept


State 34

    1 starter: starter builder .

    $default  reduce using rule 1 (starter)


State 35

   55 declaration: type declaration_list . ';'
   58 declaration_list: declaration_list . ',' sub_decl

    ','  shift, and go to state 41
    ';'  shift, and go to state 55


State 36

   84 assignment_expr: unary_expr . assign unary_expr

    MUL_ASSIGN  shift, and go to state 43
    DIV_ASSIGN  shift, and go to state 44
    MOD_ASSIGN  shift, and go to state 45
    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    '='         shift, and go to state 48

    assign  go to state 50


State 37

    7 function: type identifier . $@1 '(' argument_list ')' $@2 compound_stmt
   61 sub_decl: identifier .
   85 unary_expr: identifier . INCREMENT
   86           | identifier . DECREMENT
   89 lhs: identifier .
  112 array_access: identifier . '[' array_index ']'

    INCREMENT  shift, and go to state 52
    DECREMENT  shift, and go to state 53
    '['        shift, and go to state 54

    ','       reduce using rule 61 (sub_decl)
    '('       reduce using rule 5 ($@1)
    ';'       reduce using rule 61 (sub_decl)
    $default  reduce using rule 89 (lhs)

    $@1  go to state 56


State 38

   10 pointer: '*' . pointer
   11        | '*' .

    '*'  shift, and go to state 38

    $default  reduce using rule 11 (pointer)

    pointer  go to state 57


State 39

    8 type: data_type pointer .

    $default  reduce using rule 8 (type)


State 40

   12 data_type: sign_specifier type_specifier .

    $default  reduce using rule 12 (data_type)


State 41

   58 declaration_list: declaration_list ',' . sub_decl

    IDENTIFIER  shift, and go to state 1
    INCREMENT   shift, and go to state 2
    DECREMENT   shift, and go to state 3

    sub_decl         go to state 58
    assignment_expr  go to state 23
    unary_expr       go to state 36
    lhs              go to state 25
    identifier       go to state 26
    array_access     go to state 27


State 42

   56 declaration: declaration_list ';' .

    $default  reduce using rule 56 (declaration)


State 43

   95 assign: MUL_ASSIGN .

    $default  reduce using rule 95 (assign)


State 44

   96 assign: DIV_ASSIGN .

    $default  reduce using rule 96 (assign)


State 45

   97 assign: MOD_ASSIGN .

    $default  reduce using rule 97 (assign)


State 46

   93 assign: ADD_ASSIGN .

    $default  reduce using rule 93 (assign)


State 47

   94 assign: SUB_ASSIGN .

    $default  reduce using rule 94 (assign)


State 48

   92 assign: '=' .

    $default  reduce using rule 92 (assign)


State 49

   57 declaration: unary_expr ';' .

    $default  reduce using rule 57 (declaration)


State 50

   84 assignment_expr: unary_expr assign . unary_expr

    IDENTIFIER  shift, and go to state 1
    INCREMENT   shift, and go to state 2
    DECREMENT   shift, and go to state 3

    unary_expr  go to state 59
    identifier  go to state 60


State 51

   80 assignment_expr: lhs assign . arithmetic_expr
   81                | lhs assign . array_access
   82                | lhs assign . function_call
   83                | lhs assign . unary_expr

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    INCREMENT       shift, and go to state 2
    DECREMENT       shift, and go to state 3
    '-'             shift, and go to state 65
    '('             shift, and go to state 66

    unary_expr       go to state 67
    identifier       go to state 68
    arithmetic_expr  go to state 69
    constant         go to state 70
    array_access     go to state 71
    function_call    go to state 72


State 52

   85 unary_expr: identifier INCREMENT .

    $default  reduce using rule 85 (unary_expr)


State 53

   86 unary_expr: identifier DECREMENT .

    $default  reduce using rule 86 (unary_expr)


State 54

  112 array_access: identifier '[' . array_index ']'

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64

    identifier   go to state 73
    constant     go to state 74
    array_index  go to state 75


State 55

   55 declaration: type declaration_list ';' .

    $default  reduce using rule 55 (declaration)


State 56

    7 function: type identifier $@1 . '(' argument_list ')' $@2 compound_stmt

    '('  shift, and go to state 76


State 57

   10 pointer: '*' pointer .

    $default  reduce using rule 10 (pointer)


State 58

   58 declaration_list: declaration_list ',' sub_decl .

    $default  reduce using rule 58 (declaration_list)


State 59

   84 assignment_expr: unary_expr assign unary_expr .

    $default  reduce using rule 84 (assignment_expr)


State 60

   85 unary_expr: identifier . INCREMENT
   86           | identifier . DECREMENT

    INCREMENT  shift, and go to state 52
    DECREMENT  shift, and go to state 53


State 61

  108 constant: DEC_CONSTANT .

    $default  reduce using rule 108 (constant)


State 62

  109 constant: HEX_CONSTANT .

    $default  reduce using rule 109 (constant)


State 63

  110 constant: CHAR_CONSTANT .

    $default  reduce using rule 110 (constant)


State 64

  111 constant: FLOAT_CONSTANT .

    $default  reduce using rule 111 (constant)


State 65

  100 arithmetic_expr: '-' . arithmetic_expr

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    '-'             shift, and go to state 65
    '('             shift, and go to state 66

    identifier       go to state 77
    arithmetic_expr  go to state 78
    constant         go to state 70


State 66

   99 arithmetic_expr: '(' . arithmetic_expr ')'

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    '-'             shift, and go to state 65
    '('             shift, and go to state 66

    identifier       go to state 77
    arithmetic_expr  go to state 79
    constant         go to state 70


State 67

   83 assignment_expr: lhs assign unary_expr .

    $default  reduce using rule 83 (assignment_expr)


State 68

   85 unary_expr: identifier . INCREMENT
   86           | identifier . DECREMENT
  101 arithmetic_expr: identifier .
  112 array_access: identifier . '[' array_index ']'
  115 function_call: identifier . '(' parameter_list ')'
  116              | identifier . '(' ')'

    INCREMENT  shift, and go to state 52
    DECREMENT  shift, and go to state 53
    '('        shift, and go to state 80
    '['        shift, and go to state 54

    $default  reduce using rule 101 (arithmetic_expr)


State 69

   80 assignment_expr: lhs assign arithmetic_expr .
   98 arithmetic_expr: arithmetic_expr . math arithmetic_expr

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '%'  shift, and go to state 85

    $default  reduce using rule 80 (assignment_expr)

    math  go to state 86


State 70

  102 arithmetic_expr: constant .

    $default  reduce using rule 102 (arithmetic_expr)


State 71

   81 assignment_expr: lhs assign array_access .

    $default  reduce using rule 81 (assignment_expr)


State 72

   82 assignment_expr: lhs assign function_call .

    $default  reduce using rule 82 (assignment_expr)


State 73

  114 array_index: identifier .

    $default  reduce using rule 114 (array_index)


State 74

  113 array_index: constant .

    $default  reduce using rule 113 (array_index)


State 75

  112 array_access: identifier '[' array_index . ']'

    ']'  shift, and go to state 87


State 76

    7 function: type identifier $@1 '(' . argument_list ')' $@2 compound_stmt

    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    LONG_LONG  shift, and go to state 7
    SIGNED     shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    VOID       shift, and go to state 10
    CHAR       shift, and go to state 11
    FLOAT      shift, and go to state 12

    $default  reduce using rule 27 (argument_list)

    type            go to state 88
    data_type       go to state 17
    sign_specifier  go to state 18
    type_specifier  go to state 19
    argument_list   go to state 89
    arguments       go to state 90
    arg             go to state 91


State 77

  101 arithmetic_expr: identifier .

    $default  reduce using rule 101 (arithmetic_expr)


State 78

   98 arithmetic_expr: arithmetic_expr . math arithmetic_expr
  100                | '-' arithmetic_expr .

    $default  reduce using rule 100 (arithmetic_expr)

    math  go to state 86


State 79

   98 arithmetic_expr: arithmetic_expr . math arithmetic_expr
   99                | '(' arithmetic_expr . ')'

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '%'  shift, and go to state 85
    ')'  shift, and go to state 92

    math  go to state 86


State 80

  115 function_call: identifier '(' . parameter_list ')'
  116              | identifier '(' . ')'

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    STRING          shift, and go to state 93
    INCREMENT       shift, and go to state 2
    DECREMENT       shift, and go to state 3
    '-'             shift, and go to state 65
    '!'             shift, and go to state 94
    '('             shift, and go to state 66
    ')'             shift, and go to state 95

    sub_expr         go to state 96
    assignment_expr  go to state 97
    unary_expr       go to state 98
    lhs              go to state 25
    identifier       go to state 99
    arithmetic_expr  go to state 100
    constant         go to state 70
    array_access     go to state 101
    parameter_list   go to state 102
    parameter        go to state 103


State 81

  103 math: '+' .

    $default  reduce using rule 103 (math)


State 82

  104 math: '-' .

    $default  reduce using rule 104 (math)


State 83

  105 math: '*' .

    $default  reduce using rule 105 (math)


State 84

  106 math: '/' .

    $default  reduce using rule 106 (math)


State 85

  107 math: '%' .

    $default  reduce using rule 107 (math)


State 86

   98 arithmetic_expr: arithmetic_expr math . arithmetic_expr

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    '-'             shift, and go to state 65
    '('             shift, and go to state 66

    identifier       go to state 77
    arithmetic_expr  go to state 104
    constant         go to state 70


State 87

  112 array_access: identifier '[' array_index ']' .

    $default  reduce using rule 112 (array_access)


State 88

   30 arg: type . identifier

    IDENTIFIER  shift, and go to state 1

    identifier  go to state 105


State 89

    7 function: type identifier $@1 '(' argument_list . ')' $@2 compound_stmt

    ')'  shift, and go to state 106


State 90

   26 argument_list: arguments .
   28 arguments: arguments . ',' arg

    ','  shift, and go to state 107

    $default  reduce using rule 26 (argument_list)


State 91

   29 arguments: arg .

    $default  reduce using rule 29 (arguments)


State 92

   99 arithmetic_expr: '(' arithmetic_expr ')' .

    $default  reduce using rule 99 (arithmetic_expr)


State 93

  120 parameter: STRING .

    $default  reduce using rule 120 (parameter)


State 94

   70 sub_expr: '!' . sub_expr

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    INCREMENT       shift, and go to state 2
    DECREMENT       shift, and go to state 3
    '-'             shift, and go to state 65
    '!'             shift, and go to state 94
    '('             shift, and go to state 66

    sub_expr         go to state 108
    assignment_expr  go to state 97
    unary_expr       go to state 98
    lhs              go to state 25
    identifier       go to state 99
    arithmetic_expr  go to state 100
    constant         go to state 70
    array_access     go to state 101


State 95

  116 function_call: identifier '(' ')' .

    $default  reduce using rule 116 (function_call)


State 96

   67 sub_expr: sub_expr . rel sub_expr
   68         | sub_expr . LOGICAL_AND M sub_expr
   69         | sub_expr . LOGICAL_OR M sub_expr
  119 parameter: sub_expr .

    LOGICAL_AND  shift, and go to state 109
    LOGICAL_OR   shift, and go to state 110
    LS_EQ        shift, and go to state 111
    GR_EQ        shift, and go to state 112
    EQ           shift, and go to state 113
    NOT_EQ       shift, and go to state 114
    '<'          shift, and go to state 115
    '>'          shift, and go to state 116

    $default  reduce using rule 119 (parameter)

    rel  go to state 117


State 97

   72 sub_expr: assignment_expr .

    $default  reduce using rule 72 (sub_expr)


State 98

   73 sub_expr: unary_expr .
   84 assignment_expr: unary_expr . assign unary_expr

    MUL_ASSIGN  shift, and go to state 43
    DIV_ASSIGN  shift, and go to state 44
    MOD_ASSIGN  shift, and go to state 45
    ADD_ASSIGN  shift, and go to state 46
    SUB_ASSIGN  shift, and go to state 47
    '='         shift, and go to state 48

    $default  reduce using rule 73 (sub_expr)

    assign  go to state 50


State 99

   85 unary_expr: identifier . INCREMENT
   86           | identifier . DECREMENT
   89 lhs: identifier .
  101 arithmetic_expr: identifier .
  112 array_access: identifier . '[' array_index ']'

    INCREMENT  shift, and go to state 52
    DECREMENT  shift, and go to state 53
    '['        shift, and go to state 54

    MUL_ASSIGN  reduce using rule 89 (lhs)
    DIV_ASSIGN  reduce using rule 89 (lhs)
    MOD_ASSIGN  reduce using rule 89 (lhs)
    ADD_ASSIGN  reduce using rule 89 (lhs)
    SUB_ASSIGN  reduce using rule 89 (lhs)
    '='         reduce using rule 89 (lhs)
    $default    reduce using rule 101 (arithmetic_expr)


State 100

   71 sub_expr: arithmetic_expr .
   98 arithmetic_expr: arithmetic_expr . math arithmetic_expr

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '%'  shift, and go to state 85

    $default  reduce using rule 71 (sub_expr)

    math  go to state 86


State 101

   90 lhs: array_access .

    $default  reduce using rule 90 (lhs)


State 102

  115 function_call: identifier '(' parameter_list . ')'
  117 parameter_list: parameter_list . ',' parameter

    ','  shift, and go to state 118
    ')'  shift, and go to state 119


State 103

  118 parameter_list: parameter .

    $default  reduce using rule 118 (parameter_list)


State 104

   98 arithmetic_expr: arithmetic_expr . math arithmetic_expr
   98                | arithmetic_expr math arithmetic_expr .

    '+'  shift, and go to state 81
    '-'  shift, and go to state 82
    '*'  shift, and go to state 83
    '/'  shift, and go to state 84
    '%'  shift, and go to state 85

    '+'       [reduce using rule 98 (arithmetic_expr)]
    '-'       [reduce using rule 98 (arithmetic_expr)]
    '*'       [reduce using rule 98 (arithmetic_expr)]
    '/'       [reduce using rule 98 (arithmetic_expr)]
    '%'       [reduce using rule 98 (arithmetic_expr)]
    $default  reduce using rule 98 (arithmetic_expr)

    math  go to state 86


State 105

   30 arg: type identifier .

    $default  reduce using rule 30 (arg)


State 106

    7 function: type identifier $@1 '(' argument_list ')' . $@2 compound_stmt

    $default  reduce using rule 6 ($@2)

    $@2  go to state 120


State 107

   28 arguments: arguments ',' . arg

    SHORT      shift, and go to state 4
    INT        shift, and go to state 5
    LONG       shift, and go to state 6
    LONG_LONG  shift, and go to state 7
    SIGNED     shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    VOID       shift, and go to state 10
    CHAR       shift, and go to state 11
    FLOAT      shift, and go to state 12

    type            go to state 88
    data_type       go to state 17
    sign_specifier  go to state 18
    type_specifier  go to state 19
    arg             go to state 121


State 108

   67 sub_expr: sub_expr . rel sub_expr
   68         | sub_expr . LOGICAL_AND M sub_expr
   69         | sub_expr . LOGICAL_OR M sub_expr
   70         | '!' sub_expr .

    $default  reduce using rule 70 (sub_expr)

    rel  go to state 117


State 109

   68 sub_expr: sub_expr LOGICAL_AND . M sub_expr

    $default  reduce using rule 121 (M)

    M  go to state 122


State 110

   69 sub_expr: sub_expr LOGICAL_OR . M sub_expr

    $default  reduce using rule 121 (M)

    M  go to state 123


State 111

   78 rel: LS_EQ .

    $default  reduce using rule 78 (rel)


State 112

   79 rel: GR_EQ .

    $default  reduce using rule 79 (rel)


State 113

   76 rel: EQ .

    $default  reduce using rule 76 (rel)


State 114

   77 rel: NOT_EQ .

    $default  reduce using rule 77 (rel)


State 115

   75 rel: '<' .

    $default  reduce using rule 75 (rel)


State 116

   74 rel: '>' .

    $default  reduce using rule 74 (rel)


State 117

   67 sub_expr: sub_expr rel . sub_expr

    IDENTIFIER      shift, and go to state 1
    DEC_CONSTANT    shift, and go to state 61
    HEX_CONSTANT    shift, and go to state 62
    CHAR_CONSTANT   shift, and go to state 63
    FLOAT_CONSTANT  shift, and go to state 64
    INCREMENT       shift, and go to state 2
    DECREMENT       shift, and go to state 3
    '-'             shift, and go to state 65
    '!'             shift, and go to state 94
    '('             shift, and go to state 66

    sub_expr         go to state 124
    assignment_expr  go to state 97
    unary_expr       go to state 98
    lhs              go to state 25
    identifier       go to state 99
    arithmetic_expr  go to state 100
    constant         go to state 70
    array_access     go to state 101


State 118

  117 parameter_list: parameter_list ',' . parameter
